--- a/final/css/stylesheet.css
+++ b/final/css/stylesheet.css
@@ -47,16 +47,17 @@ h1, h2, h3, h4 {
   margin: 0;
 }
 
+h1 {
+  font-size: 8em;
+  color: white;
+}
+
 h2 {
   font-size: 3em;
 }
 
 h3 {
   font-size: 2em;
-}
-
-h4 {
-  font-size: 1.5em;
 }
 
 .read-more {
@@ -119,99 +120,69 @@ h4 {
 /* Grid things */
 
 main {
-  display: grid;
-  grid-template-rows: repeat(6, auto);
-  grid-template-columns: 80px repeat(7, 1fr);
-  /*height: 100vh;*/
+
 }
 
 h2 {
-  grid-column: 2 / 4;
-  grid-row: 1 / 1;
+
 }
 
 .read-more {
-  grid-column: 6 / 7;
-  grid-row: 1 / 4;
-  writing-mode: vertical-lr;
-  display: flex;
+
 }
 
 nav {
-  grid-column: 8 / 9;
-  grid-row: 1 / 1;
-  align-self: center;
+
 }
 
 h3 {
-  grid-column: 2 / 6;
-  grid-row: 2 / 2;
+
 }
 
 .descriptive-text {
-  grid-column: 2 / 6;
-  grid-row: 3 / 4;
+
 }
 
 .nav-buttons {
-  grid-column: 8 / 9;
-  grid-row: 2 / 4;
-  align-self: center;
+
 }
 
 h1 {
-  grid-column: 2 / 6;
-  grid-row: 4 / 4;
-  z-index: 2;
-  align-self: center;
-  font-size: 8em;
-  color: white;
+
 }
 
 .image {
-  grid-column: 1 / 8;
-  grid-row: 4 / 5;
+
 }
 
 .external-links {
-  grid-column: 8 / 9;
-  grid-row: 4 /5;
-  writing-mode: vertical-lr;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
+
 }
 
 .classification {
-  grid-row: 5 /6;
+
 }
 
 .kingdom {
-  grid-column: 2 / 3;
+
 }
 
 .phylum {
-  grid-column: 3 / 4;
+
 }
 
-.class {
-  grid-column: 4 / 5;
+.designation {
+
 }
 
 .rank {
-  grid-column: 5 / 6;
+
 }
 
 .show-all {
-  grid-column: 6 / 7;
-  grid-row: 5 /8;
-  display: flex;
-  writing-mode: vertical-lr;
+
 }
 
 .number {
-  align-items: center;
-  display: flex;
-  grid-column: 8 / 9;
-  grid-row: 5 /6;
+
 }
