--- a/final/css/stylesheet.css
+++ b/final/css/stylesheet.css
@@ -120,69 +120,94 @@ h3 {
 /* Grid things */
 
 main {
-
+  display: grid;
+  grid-template-columns: 80px repeat(7, 1fr);
+  grid-template-rows: repeat(6, auto);
+  height: 100vh;
 }
 
 h2 {
-
+  grid-column: 2 / 6;
+  grid-row: 1 / 2;
 }
 
 .read-more {
-
+  grid-column: 6 / 7;
+  grid-row: 1 / 4;
+  writing-mode: vertical-lr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav {
-
+  grid-column: 8 / 9;
+  grid-row: 1;
 }
 
 h3 {
-
+  grid-column: 2 / 6;
+  grid-row: 2 / 3;
 }
 
 .descriptive-text {
-
+  grid-column: 2 / 6;
+  grid-row: 3 / 4;
 }
 
 .nav-buttons {
-
+   grid-column: 8 / 9;
+   grid-row: 2 / 4;
 }
 
 h1 {
-
+  grid-column: 2 / 6;
+  grid-row: 4 / 5; 
+  z-index: 1;
 }
 
 .image {
-
+  grid-column: 1 / 8;
+  grid-row: 4 / 5;
 }
 
 .external-links {
-
+  grid-column: 8 /9;
+  grid-row: 4 / 5;
+  writing-mode: vertical-lr;
+  display: flex;
+  align-items: center;
 }
 
 .classification {
-
+  grid-row: 5 / 6;
 }
 
 .kingdom {
-
+  grid-column: 2 / 3;
 }
 
 .phylum {
-
+  grid-column: 3 / 4;
 }
 
 .designation {
-
+ grid-column: 4 / 5;
 }
 
 .rank {
-
+  grid-column: 5 /6;
 }
 
 .show-all {
-
+  grid-column: 6 / 7;
+  grid-row: 5 / 8;
+  writing-mode: vertical-lr;
+  display: flex;
+  align-items: center;
 }
 
 .number {
-
+  grid-column: 8 / 9;
+  grid-row: 5 / 6;
 }
